Improving element's semantics

--- a/slider.html
+++ b/slider.html
@@ -13,12 +13,14 @@
 
 	<meta name="viewport" content="width=device-width">
 
+	<link rel="stylesheet" href="css/style.css">
+
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
 	<style type="text/css">
 		#lista-imagens {margin: 0; padding: 0;}
 		#lista-imagens li {float: left;}
-		.container-nav {padding-top: 20px;}
-		.container-nav .bt-nav {width: 15px; height: 15px; background: #6FA8DC; float: left; margin-left: 20px; border: 1px solid #666; border-radius: 15px; text-indent: -999em; overflow: hidden;
+		.container-nav {padding: 20px 0;}
+		.container-nav .bt-nav {width: 15px; height: 15px; background: #6FA8DC; display: inline-block; margin-left: 20px; border: 1px solid #666; border-radius: 15px; text-indent: -999em; overflow: hidden;
 								-webkit-transition: all 0.2s ease-out;  /* Safari 3.2+, Chrome */
 						           -moz-transition: all 0.2s ease-out;  /* Firefox 4-15 */
 						             -o-transition: all 0.2s ease-out;  /* Opera 10.5–12.00 */
@@ -47,8 +49,8 @@
 
 	<!-- scripts concatenated and minified via ant build script-->
 	<script src="js/libs/jquery-1.7.2.min.js"></script>
-	<script src="js/jquery.drSlider.js"></script>
 	<script src="js/plugins.js"></script>
+	<script src="js/jquery.drSlider.js"></script>
 	<script src="js/script.js"></script>
 	<!-- end scripts-->
 
