Adding some controls methods

--- a/slider.html
+++ b/slider.html
@@ -19,8 +19,8 @@
 	<style type="text/css">
 		#lista-imagens {margin: 0; padding: 0;}
 		#lista-imagens li {float: left;}
-		.container-nav {padding: 20px 0;}
-		.container-nav .bt-nav {width: 15px; height: 15px; background: #6FA8DC; display: inline-block; margin-left: 20px; border: 1px solid #666; border-radius: 15px; text-indent: -999em; overflow: hidden;
+		.drslider-container-nav {padding: 20px 0;}
+		.drslider-container-nav .drslider-bt-nav {width: 15px; height: 15px; background: #6FA8DC; display: inline-block; margin-left: 20px; border: 1px solid #666; border-radius: 15px; text-indent: -999em; overflow: hidden;
 								-webkit-transition: all 0.2s ease-out;  /* Safari 3.2+, Chrome */
 						           -moz-transition: all 0.2s ease-out;  /* Firefox 4-15 */
 						             -o-transition: all 0.2s ease-out;  /* Opera 10.5–12.00 */
