--- a/slider.html
+++ b/slider.html
@@ -26,7 +26,7 @@
 						             -o-transition: all 0.2s ease-out;  /* Opera 10.5–12.00 */
 						                transition: all 0.2s ease-out;  /* Firefox 16+, Opera 12.50+ */
 		}
-		.container-nav .bt-nav.active {background: #F00;}
+		.drslider-container-nav .drslider-bt-nav.active {background: #F00;}
 	</style>
 </head>
 <body>
