--- a/slider.html
+++ b/slider.html
@@ -17,16 +17,38 @@
 
 	<script src="js/libs/modernizr-2.5.3.min.js"></script>
 	<style type="text/css">
-		#lista-imagens {margin: 0; padding: 0;}
-		#lista-imagens li {float: left;}
-		.drslider-container-nav {padding: 20px 0;}
-		.drslider-container-nav .drslider-bt-nav {width: 15px; height: 15px; background: #6FA8DC; display: inline-block; margin-left: 20px; border: 1px solid #666; border-radius: 15px; text-indent: -999em; overflow: hidden;
-								-webkit-transition: all 0.2s ease-out;  /* Safari 3.2+, Chrome */
-						           -moz-transition: all 0.2s ease-out;  /* Firefox 4-15 */
-						             -o-transition: all 0.2s ease-out;  /* Opera 10.5–12.00 */
-						                transition: all 0.2s ease-out;  /* Firefox 16+, Opera 12.50+ */
+		#lista-imagens {
+			margin: 0;
+			padding: 0;
 		}
-		.drslider-container-nav .drslider-bt-nav.active {background: #F00;}
+		
+		#lista-imagens li {
+			float: left;
+		}
+		
+		.drslider-container-nav {
+			padding: 20px 0;
+		}
+		
+		.drslider-container-nav .drslider-bt-nav {
+			width: 15px;
+			height: 15px;
+			background: #6FA8DC;
+			display: inline-block;
+			margin-left: 20px;
+			border: 1px solid #666;
+			border-radius: 15px;
+			text-indent: -999em;
+			overflow: hidden;
+			-webkit-transition: all 0.2s ease-out;  /* Safari 3.2+, Chrome */
+	           -moz-transition: all 0.2s ease-out;  /* Firefox 4-15 */
+	             -o-transition: all 0.2s ease-out;  /* Opera 10.5–12.00 */
+	                transition: all 0.2s ease-out;  /* Firefox 16+, Opera 12.50+ */
+		}
+
+		.drslider-container-nav .drslider-bt-nav.active {
+			background: #F00;
+		}
 	</style>
 </head>
 <body>
